--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,12 @@ script:
 - dpkg-deb --build $PACKAGE_NAME
 - mv $PACKAGE_NAME.deb $PACKAGE_NAME_VERSION
 
-- echo "-------------------------------------------"
+after_script:
 - ls -l $PACKAGE_NAME_VERSION
 - md5sum $PACKAGE_NAME_VERSION
 - dpkg --contents $PACKAGE_NAME_VERSION
-- echo "-------------------------------------------"
 
-after_install:
+deploy:
 - |
   if [[ -n $FTP_USER && -n $FTP_PASSWORD && -n $FTP_URL ]];
   then
