Attempting to upload via FTP

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,12 @@ after_script:
 - md5sum $PACKAGE_NAME_VERSION
 - dpkg --contents $PACKAGE_NAME_VERSION
 - |
-  if [[ -n $FTP_USER && -n $FTP_PASSWORD && -n $FTP_URL ]];
-  then
-    echo "Uploading package(s) to $FTP_URL ..."
-    curl -u $FTP_USER:$FTP_PASSWORD --ftp-create-dirs -T $PACKAGE_NAME_VERSION ftp://$FTP_URL/repos/debian || DEPLOY_FAILURE=true ;
-    if [[ $DEPLOY_FAILURE == 'true' ]]; then echo "Uploading package(s) failed!"; travis_terminate 1; fi;
-  fi
+  echo "Uploading package(s) to $FTP_URL ..."
+  curl -u $FTP_USER:$FTP_PASSWORD --ftp-create-dirs -T $PACKAGE_NAME_VERSION ftp://$FTP_URL/repos/debian || DEPLOY_FAILURE=true ;
+  if [[ $DEPLOY_FAILURE == 'true' ]]; then echo "Uploading package(s) failed!"; travis_terminate 1; fi;
 
-deploy:
-  provider: launchpad
-  slug: "LAUNCHPAD PROJECT SLUG"
-  oauth_token: "YOUR OAUTH_TOKEN"
-  oauth_token_secret: "YOUR OAUTH_TOKEN_SECRET"
+#deploy:
+#  provider: launchpad
+#  slug: "LAUNCHPAD PROJECT SLUG"
+#  oauth_token: "YOUR OAUTH_TOKEN"
+#  oauth_token_secret: "YOUR OAUTH_TOKEN_SECRET"
